--- a/src/components/SocialList.astro
+++ b/src/components/SocialList.astro
@@ -1,7 +1,7 @@
 ---
 import { Icon } from "astro-icon";
 
-/** 
+/**
 	Uses https://github.com/natemoo-re/astro-icon#readme
 	Find icons @ https://icones.js.org/
 */
@@ -14,22 +14,17 @@ const socialLinks: Array<{
 	{
 		name: "mdi:github",
 		friendlyName: "Github",
-		link: "https://github.com/chrismwilliams/astro-cactus",
+		link: "https://github.com/terrnit",
 	},
 	{
-		name: "mdi:mastodon",
-		friendlyName: "Mastodon",
-		link: "#",
-	},
-	{
-		name: "mdi:linkedin",
-		friendlyName: "LinkedIn",
-		link: "#",
+		name: "mdi:telegram",
+		friendlyName: "Telegram",
+		link: "https://t.me/terrnit",
 	},
 	{
 		name: "mdi:email",
 		friendlyName: "email",
-		link: "mailto:astro-cactus@chriswilliams.dev",
+		link: "mailto:terrnitllc.work@gmail.com",
 		isWebmention: true,
 	},
 ];
