--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -7,13 +7,13 @@ const year = new Date().getFullYear();
 <footer
 	class="mt-auto flex w-full flex-col items-center justify-center gap-y-2 pb-4 pt-20 text-center align-top text-gray-500 sm:flex-row sm:justify-between sm:text-xs"
 >
-	<div class="me-0 sm:me-4">
+	<div class="me-0 sm:me-4 order-2 lg:order-1 mt-4 lg:mt-0">
 		Copyright &copy; {year}{" "}
 		{siteConfig.author}
 	</div>
 	<nav
 		aria-label="More on this site"
-		class="flex gap-x-2 sm:gap-x-0 sm:divide-x sm:divide-gray-500"
+		class="flex gap-x-2 sm:gap-x-0 order-1 lg:order-2 flex-wrap lg:mt-0 justify-center items- sm:divide-x sm:divide-gray-500"
 	>
 		{
 			menuLinks.map((link) => (
