--- a/src/pages/posts/[...page].astro
+++ b/src/pages/posts/[...page].astro
@@ -2,9 +2,8 @@
 import type { Page, GetStaticPaths } from "astro";
 import type { CollectionEntry } from "astro:content";
 import PageLayout from "@/layouts/Base";
-import PostPreview from "@/components/blog/PostPreview";
-import Pagination from "@/components/Paginator";
 import { getAllPosts, getUniqueTags, sortMDByDate } from "@/utils";
+import BlogPostList from "@/components/BlogPostList";
 
 export const getStaticPaths = (async ({ paginate }) => {
 	const allPosts = await getAllPosts();
@@ -42,20 +41,8 @@ const paginationProps = {
 ---
 
 <PageLayout meta={meta}>
-	<h1 class="title mb-6">Posts</h1>
 	<div class="grid gap-y-16 sm:grid-cols-[3fr_1fr] sm:gap-x-8">
-		<section aria-label="Blog post list">
-			<ul class="space-y-8 text-start">
-				{
-					page.data.map((p) => (
-						<li class="flex flex-col flex-wrap gap-2 sm:flex-row [&_q]:basis-full">
-							<PostPreview post={p} as="h2" withDesc />
-						</li>
-					))
-				}
-			</ul>
-			<Pagination {...paginationProps} />
-		</section>
+		<BlogPostList paginationProps={paginationProps} page={page} />
 		{
 			!!uniqueTags.length && (
 				<aside>
@@ -82,7 +69,7 @@ const paginationProps = {
 						{uniqueTags.map((tag) => (
 							<li>
 								<a
-									class="flex items-center justify-center rounded-lg bg-accent p-1"
+									class="flex items-center justify-center rounded-lg bg-accent/20 px-1.5 py-0.5 text-accent"
 									href={`/tags/${tag}/`}
 									aria-label={`View all posts with the tag: ${tag}`}
 								>
@@ -91,11 +78,13 @@ const paginationProps = {
 							</li>
 						))}
 					</ul>
-					<span class="mt-4 block sm:text-end">
-						<a class="sm:hover:text-accent" href="/tags/" aria-label="View all blog categories">
-							View all →
-						</a>
-					</span>
+					{uniqueTags.length > 5 && (
+						<span class="mt-4 block sm:text-end">
+							<a class="sm:hover:text-accent" href="/tags/" aria-label="View all blog categories">
+								View all →
+							</a>
+						</span>
+					)}
 				</aside>
 			)
 		}
