--- a/src/components/BlogPostList.astro
+++ b/src/components/BlogPostList.astro
@@ -1,6 +1,6 @@
 ---
-import Pagination from "@/components/Paginator";
-import PostPreview from "@/components/blog/PostPreview";
+import Pagination from "@/components/Paginator.astro";
+import PostPreview from "@/components/blog/PostPreview.astro";
 import type { Page } from "astro";
 import type { CollectionEntry } from "astro:content";
 
