--- a/src/components/blog/Hero.astro
+++ b/src/components/blog/Hero.astro
@@ -14,8 +14,8 @@ const {
 const { remarkPluginFrontmatter } = await render();
 
 const dateTimeOptions: Intl.DateTimeFormatOptions = {
-	month: "long",
-};
+	month: "long"
+}
 ---
 
 {
