--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -2,11 +2,11 @@
 import { ViewTransitions } from "astro:transitions";
 
 import type { SiteMeta } from "@/types";
-import BaseHead from "@/components/BaseHead";
-import ThemeProvider from "@/components/ThemeProvider";
-import Header from "@/components/layout/Header";
-import Footer from "@/components/layout/Footer";
-import SkipLink from "@/components/SkipLink";
+import BaseHead from "@/components/BaseHead.astro";
+import ThemeProvider from "@/components/ThemeProvider.astro";
+import Header from "@/components/layout/Header.astro";
+import Footer from "@/components/layout/Footer.astro";
+import SkipLink from "@/components/SkipLink.astro";
 import { siteConfig } from "@/site-config";
 
 interface Props {
