--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,5 +1,6 @@
 ---
-import PageLayout from "@/layouts/Base";
+import PageLayout from "@/layouts/Base.astro";
+import { Image } from "astro:assets";
 
 const meta = {
 	title: "Oops! You found a missing page!",
@@ -8,9 +9,22 @@ const meta = {
 ---
 
 <PageLayout meta={meta} hideHeader>
-	<section class="flex h-[70vh] flex-col items-start justify-center">
-		<h1 class="title mb-4 text-2xl text-accent md:text-3xl">404s and heartbreaks</h1>
-		<p class="mb-8">We could't find the page you were looking for. Check for right url</p>
-		<a href="/" class="link my-4 block w-fit" aria-label="Go back to main page">Go back</a>
+	<section class="flex h-[70vh] flex-col items-center justify-center">
+		<Image
+			src="/404-cat.png"
+			class="mb-3 block"
+			alt="Breacat mascoot 404"
+			loading="eager"
+			fetchpriority="high"
+			height="185"
+			width="185"
+		/>
+		<h1 class="title my-4 text-2xl font-extrabold text-accent dark:text-emerald-500 md:text-3xl">
+			404s and heartbreaks
+		</h1>
+		<p class="mb-8 block max-w-[260px]">
+			We could't find the page you were looking for. Check for right url
+		</p>
+		<a href="/" class="link my-4 w-fit text-base" aria-label="Go back to main page">Go back</a>
 	</section>
 </PageLayout>
