--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
-import PageLayout from "@/layouts/Base";
-import PostPreview from "@/components/blog/PostPreview";
-import SocialList from "@/components/SocialList";
+import PageLayout from "@/layouts/Base.astro";
+import PostPreview from "@/components/blog/PostPreview.astro";
+import SocialList from "@/components/SocialList.astro";
+import MainPreview from "@/components/MainPreview.astro";
 import { getAllPosts, sortMDByDate } from "@/utils";
 
 const MAX_POSTS = 10;
@@ -11,6 +12,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 
 <PageLayout meta={{ title: "Home" }}>
 	<section>
+		<MainPreview />
 		<h1 class="title mb-6">Hello World!</h1>
 		<p class="mb-4">
 			Hi, I'm a developer, UI UX Designer and I love learning languages. This is my blog where you
